[tool.poetry]
name = "mokumoku-trade"
version = "0.1.0"
description = ""
authors = ["saikyo219 <k.higuchi.219@gmail.com>"]
readme = "README.md"
packages = [{include = "mokumoku_trade"}]

[tool.poetry.dependencies]
python = "^3.10"
v20 = "^3.0.25.0"
pandas = "^2.0.3"
schedule = "^1.2.0"
emoji = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
